[gd_scene load_steps=5 format=2]

[ext_resource path="res://CoolLine_Max11/script/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/img/gui_main_menu.jpg" type="Texture" id=2]
[ext_resource path="res://CoolLine_Max11/img/play_btn.png" type="Texture" id=3]
[ext_resource path="res://CoolLine_Max11/img/play_push_btn.png" type="Texture" id=4]

[node name="mainMenu" type="Node"]
script = ExtResource( 1 )

[node name="mainMenu_panel" type="TextureRect" parent="."]
margin_right = 504.0
margin_bottom = 895.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="startButton" type="TextureButton" parent="mainMenu_panel"]
margin_left = 153.545
margin_top = 572.534
margin_right = 363.545
margin_bottom = 636.534
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="scoreButton" type="TextureButton" parent="mainMenu_panel"]
margin_left = 219.238
margin_top = 674.011
margin_right = 297.238
margin_bottom = 754.011
shortcut_in_tooltip = false
__meta__ = {
"_edit_lock_": true
}

[node name="optionButton" type="TextureButton" parent="mainMenu_panel"]
margin_left = 106.0
margin_top = 671.0
margin_right = 184.0
margin_bottom = 757.0
shortcut_in_tooltip = false
__meta__ = {
"_edit_lock_": true
}

[node name="help_texButton" type="TextureButton" parent="mainMenu_panel"]
modulate = Color( 0.988235, 0.984314, 0.984314, 1 )
margin_left = 340.0
margin_top = 674.0
margin_right = 416.0
margin_bottom = 754.0
shortcut_in_tooltip = false
__meta__ = {
"_edit_lock_": true
}
